fix modals layout problem

--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -8,11 +8,10 @@
 .fs30 {font-size: rem(30px);}
 
 //Font weight
-.fw600 {
-    font-weight: 600;
-}
+.fw600 {font-weight: 600;}
 
 //Margin
+.mr05 {margin-right: .5em;}
 .mr1 {margin-right: 1em;}
 
 // flex helpers
